feat: add create product page

--- a/public/dashboard/assets/sass/style.scss
+++ b/public/dashboard/assets/sass/style.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
     --bs-blue: #009ef6;
     --bs-indigo: #6610f2;
@@ -69,7 +68,9 @@ body {
     background-color: var(--bs-body-bg);
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
+    // zoom: 80%;
 }
+
 hr {
     margin: 1rem 0;
     color: inherit;
